--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -23,7 +23,7 @@
   margin-right: 10vw;
 }
 
-.left div {
+.subtitle {
   opacity: .5;
 }
 
@@ -90,4 +90,25 @@
 .avatar {
   border-radius: 50%;
   margin: 0 1vw 0 10vw;
+}
+
+.modal {
+  position: fixed;
+  /* background: white; */
+  top: 0;
+  bottom: 0;
+  right: 0;
+  left: 0;
+  transition: all 0.3s;
+}
+
+.modal .content {
+  width: 80%;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  padding: 2em;
+  background: #ffffff;
+  border: solid 1px #eeeef3;
 }
