Add last updates

--- a/src/styles/UserDetails.css
+++ b/src/styles/UserDetails.css
@@ -1,4 +1,5 @@
-.user-details {
+.user-details,
+.stats {
   display: flex;
 }
 
@@ -35,4 +36,10 @@
 
 .column .number {
   font-size: 4rem;
+}
+
+.user-details .link {
+  position: absolute;
+  bottom: 0;
+  margin: 35px 0;
 }
